# ai-bootstrap

./: .gitignore  README.md  ai_bootstrap.ipynb  api.py  capsule-meta.yml  environment.yml  index.html  overlay.html  overlay.js  package-lock.json  pyproject.toml  render.yaml  requirements.txt  validate.ps1
.github/workflows/: main.yml  validate.yml
GitHub/ai-bootstrap/: capsule-meta.yml  environment.yml  validate.ps1
GitHub/ai-bootstrap/.github/workflows/: validate.yml
